Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-28969

cmake-format config file is ignored

XMLWordPrintable

    • Linux/X11
    • 3a3bf41ee (master)

      cmake-format should automatically use the config file in the directory: "You may specify a path to one or more configuration files with the --config-file command line option. Otherwise, cmake-format will search the ancestry of each infilepath looking for a configuration file to use. If no configuration file is found it will use sensible defaults."
      When running it from command line, it works, but when running it from QtCreator it is ignored.
      I tested with a cmake-format.py file near a CMakeLists.txt, with this config:

      with section("markup"):
        enable_markup = False

      This config disable the formatting of the comments.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            cadam Cristian Adam
            fleroy Florian Leroy
            Votes:
            1 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes